# google-assistant-cli

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/plans/: 2025-12-27-broadcast-cli-design.md  2025-12-27-broadcast-cli-implementation.md
src/ghome/: __init__.py  assistant.py  auth.py  cli.py  config.py
tests/: test_assistant.py  test_auth.py  test_cli.py  test_config.py
