[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "google-home-cli"
version = "0.1.0"
description = "CLI to broadcast messages to Google Home devices"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "gassist-text>=0.0.10",
    "google-auth-oauthlib>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
ghome = "ghome.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
